test case page, side bar and stlying

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,8 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/bugninja-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <!-- Theme colors for browser bars -->
+    <meta name="theme-color" content="#6366f1" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="msapplication-navbutton-color" content="#6366f1" />
+    
     <title>Bugninja Platform</title>
   </head>
   <body>
